# cryptotrader-ticker

./: Cargo.toml  Makefile  README.md  ticker.toml.example
src/: config.rs  main.rs
